--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/order_list.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/order_list.html
@@ -1,155 +1,169 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>製造部売上管理システム</title>
 <link rel="stylesheet" href="/css/sb-salesmanagement.css">
 </head>
-<body>
-  <form class="text-center" action="#" th:action="@{/salesmanagement/logout}"
-    method="post">
-    <button class="btn indigo accent-4 text-white btn-block my-4"
-      type="submit">Sign out</button>
-  </form>
-  <div sec:authorize="hasRole('ROLE_ADMIN')">管理者ページ</div>
-  <h1>製造部売上管理システム：案件一覧</h1>
-  <div>
-    <button class="add"
-      onclick="location.href='/salesmanagement/order_add'">新規登録</button>
-  </div>
-  <div>
-    <form th:action="@{/salesmanagement/order_list}" th:method="get"
-      th:object="${orderSearchForm}">
-      <select id="orderCustomerId" name="orderCustomerId"
-        th:field="*{orderCustomerId}">
-        <option value="">---</option>
-        <option th:each="customer : ${customerList}"
-          th:value="${customer.customerId}"
-          th:text="${customer.customerName}"
-          th:selected="${customer.customerId}"></option>
-      </select>
-      <!--/*categoryidセレクトボックス埋め込み箇所 [※念のためコメントアウトして保持する]
+<body class="sms-ol-body">
+	<header class="sms-header">
+		<p>
+			ログインユーザー:<span sec:authentication="principal.User.email"></span>
+		</p>
+		<div class="sms-menu-wrapper">
+			<div class="signout-div">
+				<form class="text-center" action="#"
+					th:action="@{/salesmanagement/logout}" method="post">
+					<button type="submit" class="btn">サインアウト</button>
+				</form>
+			</div>
+			<ul class="sms-menu">
+				<li sec:authorize="hasRole('ROLE_ADMIN')" class="sms-menu-item"><a
+					th:href="@{/salesmanagement/user_create}">ユーザー新規登録</a>/</li>
+				<li class="sms-menu-item"><a
+					th:href="@{/salesmanagement/user_list}">ユーザー一覧</a>/</li>
+			</ul>
+		</div>
+	</header>
+
+	<h1>製造部売上管理システム：案件一覧</h1>
+	<div>
+		<button class="add"
+			onclick="location.href='/salesmanagement/order_add'">新規登録</button>
+	</div>
+	<div>
+		<form th:action="@{/salesmanagement/order_list}" th:method="get"
+			th:object="${orderSearchForm}">
+			<select id="orderCustomerId" name="orderCustomerId"
+				th:field="*{orderCustomerId}">
+				<option value="">---</option>
+				<option th:each="customer : ${customerList}"
+					th:value="${customer.customerId}"
+					th:text="${customer.customerName}"
+					th:selected="${customer.customerId}"></option>
+			</select>
+			<!--/*categoryidセレクトボックス埋め込み箇所 [※念のためコメントアウトして保持する]
       <div class="div_for_embeded">
         <div
           th:replace="~{salesmanagement/fragments/fragment_selectbox::selectdiv}"
           th:fragment="selectAjax"></div>
       </div>
       */-->
-      <select id="orderStatusId" name="orderStatusId" disabled>
-        <option value="">---</option>
-        <option th:each="status : ${statusList}"
-          th:value="${status.statusId}"
-          th:data-val="${status.statusCustomerId}"
-          th:text="${status.statusName}"></option>
-      </select> <input type="text" id="orderName" name="orderName" placeholder="件名"
-        th:field="*{orderName}"> <input type="submit" value="検索"
-        class="btn">
-    </form>
-  </div>
-  <div class="pagenation-div" th:fragment='pagenation'>
-    <ul class='pagenation-ul'>
-      <!--/* 最初のページ(firstPage)リンク "<<" */-->
-      <li th:class="${page.firstPage}?'disabled':''"><span
-        th:if='${page.firstPage}'>&laquo;</span> <a
-        th:if='${not page.firstPage}'
-        th:href='@{${page.url}(page=0,size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&laquo;</a></li>
-      <!--/* 現在ページの1つ手前のページ(PreviousPage)リンク "<" */-->
-      <li th:class="${page.hasPreviousPage}? '' : 'disabled'"><span
-        th:if='${not page.hasPreviousPage}'>&lsaquo;</span> <a
-        th:if='${page.hasPreviousPage}'
-        th:href='@{${page.url}(page=${page.number-2},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&lsaquo;</a>
-      </li>
-      <!--/* ナンバリングリンク */-->
-      <li th:each='item : ${page.items}'
-        th:class="${item.current}? 'active' : ''"><span
-        th:if='${item.current}' th:text='${item.number}'>1</span> <a
-        th:if='${not item.current}'
-        th:href='@{${page.url}(page=${item.number-1},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>
-          <span th:text='${item.number}'>1</span>
-      </a></li>
-      <!--/* 現在ページの1つ先のページ(NextPage)リンク ">" */-->
-      <li th:class="${page.hasNextPage}? '' : 'disabled'"><span
-        th:if='${not page.hasNextPage}'>&rsaquo;</span> <a
-        th:if='${page.hasNextPage}'
-        th:href='@{${page.url}(page=${page.number},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&rsaquo;</a>
-      </li>
-      <!--/* 最後のページ(lastPage)リンク ">>" */-->
-      <li th:class="${page.lastPage}? 'disabled' : ''"><span
-        th:if='${page.lastPage}'>&raquo;</span> <a
-        th:if='${not page.lastPage}'
-        th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&raquo;</a>
-      </li>
-    </ul>
-  </div>
-  <table class="table-order-list">
-    <thead>
-      <tr>
-        <th>No.</th>
-        <th>顧客</th>
-        <th class="th-address">受注日</th>
-        <th>S番号</th>
-        <th>件名</th>
-        <th>数量</th>
-        <th>納入指定日<br>／納入日
-        </th>
-        <th>請求日</th>
-        <th>見積金額<br>／受注金額
-        </th>
-        <th>ステータス</th>
-        <th>編集</th>
-        <th>削除</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr th:each="order : ${orders}" th:object="${order}">
-        <td class="center" th:text="*{orderId}"></td>
-        <td th:text="*{customer.customerName}"></td>
-        <!--/* 「受注日」 表示 */-->
-        <td
-          th:text="${order.orderDate != null}? ${#dates.format(order.orderDate, 'yyyy/MM/dd')} : '-'"></td>
-        <td
-          th:text="${not #strings.isEmpty(order.orderSNumber)}? 'S-' + ${order.orderSNumber} : '-'"></td>
-        <td th:text="*{orderName}"></td>
-        <!--/* 「数量」 + 「単位」 表示 */-->
-        <td
-          th:text="${#numbers.formatInteger(order.orderQuantity ,1,'COMMA')} + *{orderUnitName}"></td>
-        <!--/* 「納入指定日」「納入日」 表示 */-->
-        <td>
-          <p
-            th:text="${order.orderDeliverySpecifiedDate != null}? ${#dates.format(order.orderDeliverySpecifiedDate, 'yyyy/MM/dd')} : '-'"></p>
-          <p
-            th:text="${order.orderDeliveryDate != null}? ${#dates.format(order.orderDeliveryDate, 'yyyy/MM/dd')} : '-'"></p>
-        </td>
-        <!--/* 「請求日」 表示 */-->
-        <td
-          th:text="${order.orderBillingDate != null}? ${#dates.format(order.orderBillingDate, 'yyyy/MM/dd')} : '-'"></td>
-        <!--/* 「見積金額」「受注金額」 表示  */-->
-        <td>
-          <p
-            th:text="'\\' + ${#numbers.formatInteger(order.orderQuotePrice ,1,'COMMA')}"></p>
-          <p
-            th:text="'\\' + ${#numbers.formatInteger(order.orderPrice ,1,'COMMA')}"></p>
-        </td>
-        <td th:text="*{status.statusName}"></td>
-        <td>
-          <form action="/salesmanagement/order_modify" method="post">
-            <input name="orderId" type="hidden" th:value="*{orderId}">
-            <input type="submit" value="編集" class="btn">
-          </form>
-        </td>
-        <td>
-          <form action="/salesmanagement/order_delete_confirm" method="post">
-            <input name="orderId" type="hidden" th:value="*{orderId}">
-            <input type="submit" value="削除" class="btn">
-          </form>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <script type="text/javascript" th:src="@{/js/jquery-3.5.1.min.js}"></script>
-  <script type="text/javascript" th:src="@{/js/orderlist_change.js}"
-    charset="UTF-8"></script>
+			<select id="orderStatusId" name="orderStatusId" disabled>
+				<option value="">---</option>
+				<option th:each="status : ${statusList}"
+					th:value="${status.statusId}"
+					th:data-val="${status.statusCustomerId}"
+					th:text="${status.statusName}"></option>
+			</select> <input type="text" id="orderName" name="orderName" placeholder="件名"
+				th:field="*{orderName}"> <input type="submit" value="検索"
+				class="btn">
+		</form>
+	</div>
+	<div class="pagenation-div" th:fragment='pagenation'>
+		<ul class='pagenation-ul'>
+			<!--/* 最初のページ(firstPage)リンク "<<" */-->
+			<li th:class="${page.firstPage}?'disabled':''"><span
+				th:if='${page.firstPage}'>&laquo;</span> <a
+				th:if='${not page.firstPage}'
+				th:href='@{${page.url}(page=0,size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&laquo;</a></li>
+			<!--/* 現在ページの1つ手前のページ(PreviousPage)リンク "<" */-->
+			<li th:class="${page.hasPreviousPage}? '' : 'disabled'"><span
+				th:if='${not page.hasPreviousPage}'>&lsaquo;</span> <a
+				th:if='${page.hasPreviousPage}'
+				th:href='@{${page.url}(page=${page.number-2},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&lsaquo;</a>
+			</li>
+			<!--/* ナンバリングリンク */-->
+			<li th:each='item : ${page.items}'
+				th:class="${item.current}? 'active' : ''"><span
+				th:if='${item.current}' th:text='${item.number}'>1</span> <a
+				th:if='${not item.current}'
+				th:href='@{${page.url}(page=${item.number-1},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>
+					<span th:text='${item.number}'>1</span>
+			</a></li>
+			<!--/* 現在ページの1つ先のページ(NextPage)リンク ">" */-->
+			<li th:class="${page.hasNextPage}? '' : 'disabled'"><span
+				th:if='${not page.hasNextPage}'>&rsaquo;</span> <a
+				th:if='${page.hasNextPage}'
+				th:href='@{${page.url}(page=${page.number},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&rsaquo;</a>
+			</li>
+			<!--/* 最後のページ(lastPage)リンク ">>" */-->
+			<li th:class="${page.lastPage}? 'disabled' : ''"><span
+				th:if='${page.lastPage}'>&raquo;</span> <a
+				th:if='${not page.lastPage}'
+				th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size},orderCustomerId=${page.orderCustomerId},orderStatusId=${page.orderStatusId},orderName=${page.orderName})}'>&raquo;</a>
+			</li>
+		</ul>
+	</div>
+	<table class="table-order-list">
+		<thead>
+			<tr>
+				<th>No.</th>
+				<th>顧客</th>
+				<th class="th-address">受注日</th>
+				<th>S番号</th>
+				<th>件名</th>
+				<th>数量</th>
+				<th>納入指定日<br>／納入日
+				</th>
+				<th>請求日</th>
+				<th>見積金額<br>／受注金額
+				</th>
+				<th>ステータス</th>
+				<th>編集</th>
+				<th>削除</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="order : ${orders}" th:object="${order}">
+				<td class="center" th:text="*{orderId}"></td>
+				<td th:text="*{customer.customerName}"></td>
+				<!--/* 「受注日」 表示 */-->
+				<td
+					th:text="${order.orderDate != null}? ${#dates.format(order.orderDate, 'yyyy/MM/dd')} : '-'"></td>
+				<td
+					th:text="${not #strings.isEmpty(order.orderSNumber)}? 'S-' + ${order.orderSNumber} : '-'"></td>
+				<td th:text="*{orderName}"></td>
+				<!--/* 「数量」 + 「単位」 表示 */-->
+				<td
+					th:text="${#numbers.formatInteger(order.orderQuantity ,1,'COMMA')} + *{orderUnitName}"></td>
+				<!--/* 「納入指定日」「納入日」 表示 */-->
+				<td>
+					<p
+						th:text="${order.orderDeliverySpecifiedDate != null}? ${#dates.format(order.orderDeliverySpecifiedDate, 'yyyy/MM/dd')} : '-'"></p>
+					<p
+						th:text="${order.orderDeliveryDate != null}? ${#dates.format(order.orderDeliveryDate, 'yyyy/MM/dd')} : '-'"></p>
+				</td>
+				<!--/* 「請求日」 表示 */-->
+				<td
+					th:text="${order.orderBillingDate != null}? ${#dates.format(order.orderBillingDate, 'yyyy/MM/dd')} : '-'"></td>
+				<!--/* 「見積金額」「受注金額」 表示  */-->
+				<td>
+					<p
+						th:text="'\\' + ${#numbers.formatInteger(order.orderQuotePrice ,1,'COMMA')}"></p>
+					<p
+						th:text="'\\' + ${#numbers.formatInteger(order.orderPrice ,1,'COMMA')}"></p>
+				</td>
+				<td th:text="*{status.statusName}"></td>
+				<td>
+					<form action="/salesmanagement/order_modify" method="post">
+						<input name="orderId" type="hidden" th:value="*{orderId}">
+						<input type="submit" value="編集" class="btn">
+					</form>
+				</td>
+				<td>
+					<form action="/salesmanagement/order_delete_confirm" method="post">
+						<input name="orderId" type="hidden" th:value="*{orderId}">
+						<input type="submit" value="削除" class="btn">
+					</form>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<script type="text/javascript" th:src="@{/js/jquery-3.5.1.min.js}"></script>
+	<script type="text/javascript" th:src="@{/js/orderlist_change.js}"
+		charset="UTF-8"></script>
 </body>
 </html>
