--- a/sb-salesmanagement/bin/main/templates/salesmanagement/login.html
+++ b/sb-salesmanagement/bin/main/templates/salesmanagement/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:th="http://www.thymeleaf.org">
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>製造部売上管理システム</title>
@@ -9,6 +10,9 @@
 <body>
   <a th:href="@{/salesmanagement/signup}">新規登録</a>
   <h1>製造部売上管理システム：ログイン</h1>
+  <div class="" th:if="${param['error'] != null && session['SPRING_SECURITY_LAST_EXCEPTION'] != null}">
+  メールアドレスもしくはパスワードが間違っているか入力されていません。
+  </div>
   <form th:action="@{/salesmanagement/login}" th:method="post">
     <table>
       <tr>
