--- a/sb-salesmanagement/src/main/resources/static/css/sb-salesmanagement.css
+++ b/sb-salesmanagement/src/main/resources/static/css/sb-salesmanagement.css
@@ -60,6 +60,11 @@ table th {
 	width: 100%;
 }
 
+.table-customer-list {
+	table-layout: fixed;
+	width: 50%;
+}
+
 .table-form {
 	margin-top: 20px;
 	margin-bottom: 20px;
