--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/customer_modify.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/customer_modify.html
@@ -22,7 +22,7 @@
 				</tr>
 				<tr>
 					<th class="form-title">顧客名</th>
-					<th class="form-required"></th>
+					<th class="form-required">*</th>
 					<td><input type="text" id="customerName"
 						th:field="*{customerName}">
 						<div th:if="${#fields.hasErrors('customerName')}"
